# nba_elt_mlflow

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .~lock.test.csv#  Makefile  Pipfile  README.md  dvc.yaml  jacobs_notes.md  mflow.db  ml_test.csv  pyproject.toml  test.csv
.dvc/: README.md  config
.github/: labeler.yml
.github/workflows/: ci_cd.yml  deploy.yml  deploy_ml.yml  test.yml  test_ml.yml
data/: .gitignore  past_games_2023-10-18.csv.dvc
docker/: Dockerfile  Dockerfile.test  docker-compose-postgres.yml  docker-compose-test.yml  install_packages.sh  postgres_bootstrap.sql
ml_experiments/: README.md  __init__.py  config.py  data_generator.py  evaluation.py  feature_engineering.py  model_comparison.py  models.py  run_experiments.py  training_pipeline.py
practice/: dvc_training.py  ec2_prac.ipynb  extra.py  linear_reg.py  main.py  nba_main.ipynb  past_games.csv  past_games_2023-10-18.csv  retrain.ipynb  test.csv  training_v2.py  utils.py
src/: app.py  linear_reg.py  log_model.joblib  main.py  nba_main.ipynb  nba_tonights_games_ml.py  utils.py
tests/: conftest.py  unit_test.py
tests/fixtures/: full_df_test.csv  log_model.joblib  log_model_v2.joblib  ml_df_test.csv
tests/integration/: calculate_win_pct_test.py  get_feature_flags_test.py  load_v2_artifacts_test.py  ml_predictions_test.py  ml_predictions_v2_test.py
tests/unit/: calculate_win_pct_logic_test.py  check_feature_flag_test.py  unit_test.py
