[tool.poetry]
name = "nba-elt-mlflow"
version = "1.5.1"
description = "Ingestion Script for NBA ELT Project"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.1"
jyablonski_common_modules = "^0.0.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
coveralls = "^3.3.1"
mypy = "^1.7.1"
pandas-stubs = "^2.1.1.230928"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
mlflow = "^2.7.1"
ruff = "^0.0.292"
dvc = { extras = ["s3"], version = "^3.55.2" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Trying to unpickle estimator LogisticRegression from version:sklearn.base.InconsistentVersionWarning",
    "ignore:X has feature names, but LogisticRegression was fitted without feature names:UserWarning",
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
extend-exclude = ["practice/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
