[project]
name = "nba-elt-mlflow"
version = "1.5.1"
description = "Ingestion Script for NBA ELT Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.3.1,<2",
    "jyablonski_common_modules>=0.0.6,<0.0.7",
]

[dependency-groups]
test = [
    "black>=23.9.1,<24",
    "pytest>=7.4.2,<8",
    "coveralls>=3.3.1,<4",
    "mypy>=1.7.1,<2",
    "pandas-stubs>=2.1.1.230928,<3",
]
local = [
    "ipykernel>=6.25.2,<7",
    "matplotlib>=3.8.0,<4",
    "mlflow>=2.7.1,<3",
    "ruff>=0.0.292,<0.0.293",
    "dvc[s3]>=3.55.2,<4",
]
dev = ["ipykernel>=6.29.5,<7"]

[tool.uv]
package = false
default-groups = [
    "test",
    "local",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Trying to unpickle estimator LogisticRegression from version:sklearn.base.InconsistentVersionWarning",
    "ignore:X has feature names, but LogisticRegression was fitted without feature names:UserWarning",
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["practice/"]
