[project]
name = "nba-elt-mlflow"
version = "1.5.1"
description = "Ingestion Script for NBA ELT Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = ["scikit-learn>=1.3.1,<2", "jyablonski_common_modules>=0.0.6"]

[dependency-groups]
dev = ["pytest>=7.4.2,<8", "pytest-cov>=7.0.0"]
local = [
    "ipykernel>=6.25.2",
    "matplotlib>=3.8.0",
    "mlflow>=2.7.1",
    "ruff>=0.0.292",
    "mypy>=1.17.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Trying to unpickle estimator LogisticRegression from version:sklearn.base.InconsistentVersionWarning",
    "ignore:X has feature names, but LogisticRegression was fitted without feature names:UserWarning",
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["practice/"]

[tool.coverage.run]
omit = ["src/app.py", "tests/*"]
